; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_tcrypt.c_do_one_ahash_op.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_tcrypt.c_do_one_ahash_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.crypto_wait* }
%struct.crypto_wait = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*, i32)* @do_one_ahash_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_one_ahash_op(%struct.ahash_request* %0, i32 %1) #0 {
  %3 = alloca %struct.ahash_request*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.crypto_wait*, align 8
  store %struct.ahash_request* %0, %struct.ahash_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %7 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.crypto_wait*, %struct.crypto_wait** %8, align 8
  store %struct.crypto_wait* %9, %struct.crypto_wait** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.crypto_wait*, %struct.crypto_wait** %5, align 8
  %12 = call i32 @crypto_wait_req(i32 %10, %struct.crypto_wait* %11)
  ret i32 %12
}

declare dso_local i32 @crypto_wait_req(i32, %struct.crypto_wait*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
